updated merger test

--- a/apache/httpd-vhosts.conf
+++ b/apache/httpd-vhosts.conf
@@ -8,6 +8,7 @@
 	SetEnv "LOCAL_PATH" "/srv/sites/hvadhedderde/wtf-mergers-tests/src"
 
 	# setup local css+js mergers
+	#Alias "/js/lib/build" "/srv/sites/hvadhedderde/wtf-js-merger"
 	Alias "/js/lib/build" "/srv/sites/hvadhedderde/wtf-mergers-tests/submodules/wtf-js-merger"
 	SetEnv "JS_PATH" "/srv/sites/hvadhedderde/wtf-mergers-tests/src/www/js"
 
