--- a/apache/httpd-vhosts.conf
+++ b/apache/httpd-vhosts.conf
@@ -1,17 +1,17 @@
 # local test configuration
 <VirtualHost *:80>
-	DocumentRoot "/srv/sites/hvadhedderde/wtf-mergers-tests/src/www"
-	ServerName wtf-mergers.local
+	DocumentRoot "/srv/sites/clients/mergers-tests/src/www"
+	ServerName mergers.local
 
 
 	# include path for php
-	SetEnv "LOCAL_PATH" "/srv/sites/hvadhedderde/wtf-mergers-tests/src"
+	SetEnv "LOCAL_PATH" "/srv/sites/clients/mergers-tests/src"
 
 	# setup local css+js mergers
 	#Alias "/js/lib/build" "/srv/sites/hvadhedderde/wtf-js-merger"
-	Alias "/js/lib/build" "/srv/sites/hvadhedderde/wtf-mergers-tests/submodules/wtf-js-merger"
-	SetEnv "JS_PATH" "/srv/sites/hvadhedderde/wtf-mergers-tests/src/www/js"
+	Alias "/js/lib/build" "/srv/sites/clients/mergers-tests/submodules/wtf-js-merger"
+	SetEnv "JS_PATH" "/srv/sites/clients/mergers-tests/src/www/js"
 
-	Alias "/css/lib/build" "/srv/sites/hvadhedderde/wtf-mergers-tests/submodules/wtf-css-merger"
-	SetEnv "CSS_PATH" "/srv/sites/hvadhedderde/wtf-mergers-tests/src/www/css"
+	Alias "/css/lib/build" "/srv/sites/clients/mergers-tests/submodules/wtf-css-merger"
+	SetEnv "CSS_PATH" "/srv/sites/clients/mergers-tests/src/www/css"
 </VirtualHost>
