--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "submodules/wtf-js-merger"]
-	path = submodules/wtf-js-merger
-	url = https://github.com/hvadhedderde/wtf-js-merger.git
 [submodule "submodules/wtf-css-merger"]
 	path = submodules/wtf-css-merger
 	url = https://github.com/hvadhedderde/wtf-css-merger.git
+[submodule "submodules/js-merger"]
+	path = submodules/js-merger
+	url = https://github.com/parentnode/js-merger.git
