updated mergers to new location

--- a/apache/httpd-vhosts.conf
+++ b/apache/httpd-vhosts.conf
@@ -8,10 +8,11 @@
 	SetEnv "LOCAL_PATH" "/srv/sites/clients/mergers-tests/src"
 
 	# setup local css+js mergers
-	#Alias "/js/lib/build" "/srv/sites/hvadhedderde/wtf-js-merger"
-	Alias "/js/lib/build" "/srv/sites/clients/mergers-tests/submodules/wtf-js-merger"
+	#Alias "/js/lib/build" "/srv/sites/clients/js-merger"
+	Alias "/js/lib/build" "/srv/sites/clients/mergers-tests/submodules/js-merger"
 	SetEnv "JS_PATH" "/srv/sites/clients/mergers-tests/src/www/js"
 
-	Alias "/css/lib/build" "/srv/sites/clients/mergers-tests/submodules/wtf-css-merger"
+	#Alias "/css/lib/build" "/srv/sites/clients/css-merger"
+	Alias "/css/lib/build" "/srv/sites/clients/mergers-tests/submodules/css-merger"
 	SetEnv "CSS_PATH" "/srv/sites/clients/mergers-tests/src/www/css"
 </VirtualHost>
